* Mobile-chat: Instead of time, we now show day + time. ex: "Yesterday at 13:30" * Fixed a bug on mobile-pinboards * Fixed a bug on tv-chat * Added a loading animation for chat while waiting for hte content to load. * Added more realistic conversations on YeetFleet chat.

--- a/Angular/frontend/src/app/pages/TV/tv-message/tv-message.component.scss
+++ b/Angular/frontend/src/app/pages/TV/tv-message/tv-message.component.scss
@@ -75,11 +75,10 @@
 }
 
 .message-time{
-    font-size: 1em;
-    // font-size: 1.4vw;1
+    font-size: 1.3em;
+    color: rgb(83, 83, 83);
 
     position: absolute;
-    // left: 23vw;
     right: 5%;    
     bottom: 0%;
     margin: 0px;
